--- a/UI/about.html
+++ b/UI/about.html
@@ -28,7 +28,10 @@
         </div>
     </header>
     <main>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, magnam! Unde necessitatibus vitae et praesentium facilis corrupti nisi velit maiores magnam pariatur tenetur quo repudiandae, magni adipisci temporibus similique? Corrupti, accusantium! Unde optio ipsum quasi dolore laboriosam iste iusto vitae inventore sit eos, velit eius rerum perferendis autem. Odit, deleniti, voluptate, necessitatibus nemo impedit numquam excepturi error molestiae beatae molestias reiciendis rem unde cumque ad itaque! Sit, autem quo culpa adipisci itaque voluptas mollitia ea voluptates nam natus impedit quos labore. Numquam, iste reiciendis atque laborum placeat unde sunt nostrum suscipit totam nobis, labore minima commodi quia ipsum sed cupiditate.</p>
+     <p>
+      Coming up with new designs can be quite an intensive process especially when you feel  like you can’t really think of anything  new, commonly referred to as designer’s block. Normally most people try to deal with this by going through a whole load of images online so as to get inspiration, but this has a downside in terms of time and money.
+      The vast knowledge of Deep Learning especially on the topic of Generative Adversarial Networks can be applied to help tackle this in a more efficient and inexpensive way.
+     </p>
     </main>
 </body>
 </html>
