--- a/UI/help.html
+++ b/UI/help.html
@@ -26,7 +26,7 @@
         </div>
     </header>
     <main>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta laboriosam impedit facilis reiciendis iure? Vitae sint velit nobis laborum nesciunt ea mollitia facilis voluptas ratione ducimus. Magnam totam consequuntur corrupti cumque tenetur suscipit consectetur reiciendis? Tempora aperiam dolore vero mollitia quasi exercitationem vel vitae, dolorum ipsam dolor soluta quos repellat odit. Fuga maxime doloremque, obcaecati fugiat veritatis libero amet rerum ab id eius molestias qui facere perferendis tempora rem ducimus. Facilis, qui, aliquid ut tempore vitae earum labore iusto eveniet officiis autem ipsam voluptate non vero in esse amet, ducimus praesentium pariatur voluptas mollitia eum odit nulla aut. Veniam, odio!</p>
+      <p>Help</p>
     </main>
 </body>
 </html>
